Use TBB_INCLUDE_DIR for consistency w/ falco,agent
They share cmakefiles in some cases, so use a consistent definition for
tbb includes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -244,10 +244,10 @@ endif()
 if(NOT WIN32 AND NOT APPLE)
 	option(USE_BUNDLED_TBB "Enable building of the bundled tbb" ${USE_BUNDLED_DEPS})
 	if(NOT USE_BUNDLED_TBB)
-		find_path(TBB_INCLUDE tbb.h PATH_SUFFIXES tbb)
+		find_path(TBB_INCLUDE_DIR tbb.h PATH_SUFFIXES tbb)
 		find_library(TBB_LIB NAMES tbb)
-		if(TBB_INCLUDE AND TBB_LIB)
-			message(STATUS "Found tbb: include: ${TBB_INCLUDE}, lib: ${TBB_LIB}")
+		if(TBB_INCLUDE_DIR AND TBB_LIB)
+			message(STATUS "Found tbb: include: ${TBB_INCLUDE_DIR}, lib: ${TBB_LIB}")
 		else()
 			message(FATAL_ERROR "Couldn't find system tbb")
 		endif()
@@ -256,7 +256,7 @@ if(NOT WIN32 AND NOT APPLE)
 
 		message(STATUS "Using bundled tbb in '${TBB_SRC}'")
 
-		set(TBB_INCLUDE "${TBB_SRC}/include/")
+		set(TBB_INCLUDE_DIR "${TBB_SRC}/include/")
 		set(TBB_LIB "${TBB_SRC}/build/lib_release/libtbb.a")
 		ExternalProject_Add(tbb
 			URL "http://s3.amazonaws.com/download.draios.com/dependencies/tbb-2018_U5.tar.gz"
