--- a/userspace/sysdig/CMakeLists.txt
+++ b/userspace/sysdig/CMakeLists.txt
@@ -20,6 +20,7 @@ include_directories("${JSONCPP_INCLUDE}")
 if(NOT WIN32)
     if(NOT APPLE)
         include_directories("${CURL_INCLUDE_DIR}")
+	include_directories("${TBB_INCLUDE_DIR}")
     endif()
 	include_directories("${CURSES_INCLUDE_DIR}")
 endif()
